--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PR4 Opdracht</title>
+    <title>Samen eten :)</title>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <style>
@@ -13,10 +13,24 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Welcome bij de API</h1>
+            <h1>Welkom bij de Samen eten API</h1>
         </div>
         <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/uUmR1ovCHD2cE9hzFX" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/thevoiceofholland-the-voice-lil-kleine-lilkleine-uUmR1ovCHD2cE9hzFX"></a></p>
     </div>
+
+      <!-- Footer -->
+  <footer class="bg-white">
+ 
+    <!-- Copyrights -->
+    <div class="bg-light py-4">
+      <div class="container text-center">
+        <p class="text-muted mb-0 py-2">© 2021 Joey de Jonge.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- End -->
+
+</body>
 
 </body>
 </html>
